0.2.1-beta.2
 - 2023-03-16 fixed: drag&drop not working in list
 - 2023-03-16 visible number in row actions changed to none by default(technically 100) & allow setting
 - 2023-03-09 fixed browselist column & sort
 - 2023-03-08 udpate: reorgainize richtext compact tool & renamed fieldtype.json to fieldtype_settings.json

0.2.1-beta.1
- 2023-03-04    added: parent in Select for dmimage
- 2023-02-26 Removed css out(use @import "~digimaker-ui/digimaker-ui.css" in project instead) 
- 2023-02-26 Support parent_id in relationlist parameters
- 2022-12-19 DMinit supports datetime settings
- 2022-12-06 Metadata way & welcome to 0.2.1-xxx not directly backward compatiable
- note: 0.2.1 is for new metadata way, old metadata using 0.2.0-x

0.2.0-beta.5
- Fetch tree data inside TreeNode(so removed 'data' prop)
- Put all components export under digimaker-ui, digimaker-ui/actions, digimaker-ui/view

0.2.0-beta.4
- Added Main for main page example
- Browse onConfirm callback supporting return false to prevent hiding dialog
- FetchWithAuth supports like url like 'content/get/3' with full url
- Support util.setRefreshToken( token )